# forthtoy

./: CMakeLists.txt  LICENSE  README.md
Source/: forth_main.c  interp.c
